RESOLVED FIXED312706
[JSC][WASM][Debugger] Fix DebugServer::reset() deadlock on reconnect after detach
https://bugs.webkit.org/show_bug.cgi?id=312706
Summary [JSC][WASM][Debugger] Fix DebugServer::reset() deadlock on reconnect after ...
Yijia Huang
Reported 2026-04-18 21:54:32 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-18 21:54:37 PDT
Yijia Huang
Comment 2 2026-04-18 21:58:06 PDT
EWS
Comment 3 2026-04-21 10:53:17 PDT
Committed 311703@main (f45de3a3d2a7): <https://commits.webkit.org/311703@main> Reviewed commits have been landed. Closing PR #63058 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.