Source/JavaScriptCore/wasm/debugger/WasmDebugServer.cpp
@@ -204,13 +204,12 @@ void DebugServer::reset()
     // Reset to the init state without stopping the debug server.
     m_isDebuggerReady.store(false, std::memory_order_release);
     m_hasContinued.store(false, std::memory_order_release);
-    closeSocket(m_clientSocket);
     m_noAckMode = false;
     m_packetParser.reset();
-    // Gate VM threads out before touching ExecutionHandler: close the socket so
-    // hasDebugger() returns false, and clear isDebuggerReady so no new traps enter
-    // the debugger path.
+    // m_isDebuggerReady=false before reset() gates new traps; socket closed after so
+    // hasDebugger() stays true for wasmDebuggerOnResumeCallback() during resumeImpl().
     m_executionHandler->reset();
+    closeSocket(m_clientSocket);
 }
 
 static void dumpReceivedBytes(std::span<const uint8_t> buffer)
